--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>    
 <nav class="navbar" >   
-  <img id="logo" src="https://www.nicepng.com/png/full/307-3072434_portfolio-logo-white-background-kw-luxury-homes-logo.png" alt=""> 
+  <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Blaze_apostas_logo.png" alt=""> 
   <img id="menubar" src="https://cdn-icons-png.flaticon.com/512/2311/2311531.png" alt="" onclick="change()">
   <ul class="list">     
     <img class="cross" src="https://icons.veryicon.com/png/o/miscellaneous/medium-thin-linear-icon/cross-23.png" alt="" onclick="change()">
