--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p> CART </p> 
     <img class="close-cart" src="https://icons.veryicon.com/png/o/miscellaneous/medium-thin-linear-icon/cross-23.png" alt="" onclick="done()"> </div>     
     <hr>   
-    <div id="checkoutPrice">Total: $0</div>  
+    <div id="checkoutPrice">Total: 0</div>  
   </div> 
 </nav>  
 <section> 
